--- a/stripe-app/package.json
+++ b/stripe-app/package.json
@@ -6,6 +6,7 @@
   "license": "~~proprietary~~",
   "dependencies": {
     "@stripe/ui-extension-sdk": "^8.1.0",
+    "axios": "^0.27.2",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "stripe": "^9.11.0"
